make addSalaried employee unit test pass

--- a/PayrollSystem/Logic/Logic.csproj
+++ b/PayrollSystem/Logic/Logic.csproj
@@ -39,7 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employee.cs" />
+    <Compile Include="PayrollDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transactions\AddSalariedEmployee.cs" />
     <Compile Include="Transactions\Transaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
