--- a/PayrollSystem/Logic/Logic.csproj
+++ b/PayrollSystem/Logic/Logic.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Payment\SalariedClassification.cs" />
     <Compile Include="PayrollDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transactions\AddEmployeeTransaction.cs" />
     <Compile Include="Transactions\AddSalariedEmployee.cs" />
     <Compile Include="Transactions\Transaction.cs" />
   </ItemGroup>
