--- a/PayrollSystem/Logic/Logic.csproj
+++ b/PayrollSystem/Logic/Logic.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Transactions\AddEmployeeTransaction.cs" />
     <Compile Include="Transactions\AddHourlyEmployee.cs" />
     <Compile Include="Transactions\AddSalariedEmployee.cs" />
+    <Compile Include="Transactions\DeleteEmployeeTransaction.cs" />
     <Compile Include="Transactions\Transaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
