--- a/PayrollSystem/LogicUnitTests/LogicUnitTests.csproj
+++ b/PayrollSystem/LogicUnitTests/LogicUnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AddEmployeeUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DeleteEmployeeUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Logic\Logic.csproj">
