--- a/PayrollSystem/Logic/Logic.csproj
+++ b/PayrollSystem/Logic/Logic.csproj
@@ -45,10 +45,12 @@
     <Compile Include="Payment\SalariedClassification.cs" />
     <Compile Include="PayrollDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeCard.cs" />
     <Compile Include="Transactions\AddEmployeeTransaction.cs" />
     <Compile Include="Transactions\AddHourlyEmployee.cs" />
     <Compile Include="Transactions\AddSalariedEmployee.cs" />
     <Compile Include="Transactions\DeleteEmployeeTransaction.cs" />
+    <Compile Include="Transactions\TimeCardTransaction.cs" />
     <Compile Include="Transactions\Transaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
