--- a/PayrollSystem/Payroll.MyWebApp/Web.config
+++ b/PayrollSystem/Payroll.MyWebApp/Web.config
@@ -42,4 +42,10 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers></system.webServer>
+
+  <connectionStrings>
+    <!--<add name="ManagementServerContext" connectionString="Data Source=|DataDirectory|ManagementServerContext.sdf" providerName="System.Data.SqlServerCe.4.0" />-->
+    <!-- <add name="ManagementServerContext" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;MultipleActiveResultSets=True;AttachDBFilename=|DataDirectory|ManagementServerContext.mdf;User Instance=true" providerName="System.Data.SqlClient" />-->
+    <add name="ManagementServerContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ManagementServerContext;MultipleActiveResultSets=True;User ID=iex;Password=a:123456" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
